style: WinNumberDtoTest 정리